--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "nuxtappionic",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -6,18 +8,21 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "ionic:build": "npm run build",
+    "ionic:build": "npm run generate",
     "ionic:serve": "npm run dev"
   },
   "devDependencies": {
     "nuxt": "3.0.0"
   },
   "dependencies": {
+    "@capacitor/android": "4.6.1",
     "@capacitor/app": "4.1.1",
     "@capacitor/cli": "4.6.1",
     "@capacitor/core": "4.6.1",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.1",
     "@capacitor/keyboard": "4.1.0",
-    "@capacitor/status-bar": "4.1.1"
+    "@capacitor/status-bar": "4.1.1",
+    "@nuxtjs/ionic": "^0.8.0"
   }
 }
